// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> with all options matches its snapshot 1`] = `
<StyledTextFieldBase
  aria-required={true}
  ariaLabel="ARIA_LABEL"
  autoAdjustHeight={true}
  className="y-textField y-textArea CLASS"
  componentRef={[Function]}
  description="true"
  disabled={true}
  errorMessage="ERROR MESSAGE"
  label="LABEL"
  multiline={true}
  onBlur={[MockFunction onBlur]}
  onChanged={[Function]}
  onFocus={[MockFunction onFocus]}
  onMouseEnter={[MockFunction onMouseEnter]}
  onMouseLeave={[MockFunction onMouseLeave]}
  onRenderDescription={[Function]}
  placeholder="PLACEHOLDER"
  resizable={false}
  rows={2}
  value="VALUE"
/>
`;

exports[`<TextArea /> with default options matches its snapshot 1`] = `
<StyledTextFieldBase
  className="y-textField y-textArea"
  componentRef={[Function]}
  multiline={true}
  onChanged={[Function]}
  onRenderDescription={[Function]}
  resizable={false}
/>
`;

exports[`<TextArea /> with description and no error matches its snapshot 1`] = `
<StyledTextFieldBase
  className="y-textField y-textArea"
  componentRef={[Function]}
  description="true"
  multiline={true}
  onChanged={[Function]}
  onRenderDescription={[Function]}
  resizable={false}
/>
`;
